--- a/NeoReborn/src/main/resources/fxml/ActiveInfoRepTemplate.fxml
+++ b/NeoReborn/src/main/resources/fxml/ActiveInfoRepTemplate.fxml
@@ -2,25 +2,24 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Glow?>
-<?import javafx.scene.effect.Light?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="inactiveInfoTemplate" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="183.0" style="-fx-border-color: #00e000; -fx-border-width: 3; -fx-background-color: #00e000;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="inactiveInfoTemplate" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="181.0" style="-fx-border-color: #00e000; -fx-border-width: 3; -fx-background-color: #00e000;" stylesheets="@../css/info.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="nameLb" layoutX="8.0" layoutY="10.0" style="-fx-text-fill: #202020;" text="GRAPH 1" textFill="#202020">
          <font>
-            <Font name="Segoe UI Bold" size="20.0" />
+            <Font name="Calibri Bold" size="20.0" />
          </font>
          <effect>
             <Glow level="0.29" />
          </effect>
       </Label>
-      <Label fx:id="directLb" layoutX="149.0" layoutY="-1.0" style="-fx-text-fill: #202020;" text="↔" textFill="#202020">
+      <Label fx:id="directLb" layoutX="151.0" layoutY="9.0" style="-fx-text-fill: #202020;" text="↔" textFill="#202020" AnchorPane.rightAnchor="3.0">
          <font>
-            <Font name="Segoe UI Bold" size="36.0" />
+            <Font name="Calibri Bold" size="20.0" />
          </font>
          <effect>
             <Glow level="0.29" />
@@ -28,23 +27,23 @@
       </Label>
       <Label fx:id="verticesLb" layoutX="8.0" layoutY="40.0" prefHeight="15.0" prefWidth="86.0" style="-fx-text-fill: #202020;" text="Vertices: " textFill="#202020">
          <font>
-            <Font name="Segoe UI Bold" size="12.0" />
+            <Font name="Calibri Bold" size="15.0" />
          </font>
          <effect>
             <Glow level="0.29" />
          </effect>
       </Label>
-      <Label fx:id="weightedLb" layoutX="126.0" layoutY="10.0" style="-fx-text-fill: #202020;" text="W" textFill="#202020">
+      <Label fx:id="weightedLb" layoutX="126.0" layoutY="10.0" style="-fx-text-fill: #202020;" text="W" textFill="#202020" AnchorPane.rightAnchor="36.0">
          <font>
-            <Font name="Segoe UI Bold" size="20.0" />
+            <Font name="Calibri Bold" size="20.0" />
          </font>
          <effect>
             <Glow level="0.29" />
          </effect>
       </Label>
-      <Label fx:id="edgesLb" layoutX="94.0" layoutY="40.0" prefHeight="15.0" prefWidth="86.0" style="-fx-text-fill: #202020;" text="Edges: " textFill="#202020">
+      <Label fx:id="edgesLb" layoutX="94.0" layoutY="40.0" prefHeight="15.0" prefWidth="86.0" style="-fx-text-fill: #202020;" text="Edges: " textFill="#202020" AnchorPane.rightAnchor="3.0">
          <font>
-            <Font name="Segoe UI Bold" size="12.0" />
+            <Font name="Calibri Bold" size="15.0" />
          </font>
          <effect>
             <Glow level="0.29" />
