--- a/NeoReborn/src/main/resources/fxml/MainWindow.fxml
+++ b/NeoReborn/src/main/resources/fxml/MainWindow.fxml
@@ -8,87 +8,93 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainAP" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="918.0" prefWidth="1236.0" style="-fx-background-color: #202020;" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="neoreborn.MainWindow">
+<AnchorPane fx:id="mainAP" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="1236.0" style="-fx-background-color: #202020; -fx-alignment: top;" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="neoreborn.MainWindow">
    <children>
-      <AnchorPane fx:id="repTemplate" layoutX="183.0" prefHeight="669.0" prefWidth="1053.0" style="-fx-border-color: #00e000; -fx-border-width: 3;" />
-      <AnchorPane layoutX="183.0" layoutY="664.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="253.0" prefWidth="1053.0" style="-fx-background-color: #202020; -fx-border-color: #00e000; -fx-border-width: 3;">
+      <AnchorPane fx:id="repTemplate" layoutX="183.0" prefHeight="394.0" prefWidth="1053.0" style="-fx-border-color: #00e000; -fx-border-width: 3;" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <AnchorPane fx:id="workAp" layoutX="183.0" layoutY="390.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="253.0" prefWidth="1053.0" style="-fx-background-color: #202020; -fx-border-color: #00e000; -fx-border-width: 3;" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <AnchorPane fx:id="actionAp" disable="true" prefHeight="152.0" prefWidth="307.0" style="-fx-border-color: #00e000; -fx-border-width: 3;">
+            <AnchorPane AnchorPane.bottomAnchor="-2.0">
                <children>
-                  <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="51.0" text="Action: " textFill="#00e000">
-                     <font>
-                        <Font name="Segoe UI Bold" size="13.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="actionCb" layoutX="148.0" layoutY="12.0" prefHeight="27.0" prefWidth="129.0" promptText="Select function" style="-fx-background-color: #202020; -fx-border-color: #00e000; -fx-text-base-color: #00e000;" />
-                  <Slider fx:id="speedSlider" blockIncrement="1.0" layoutX="142.0" layoutY="57.0" majorTickUnit="1.0" max="10.0" showTickLabels="true" />
-                  <Label layoutX="8.0" layoutY="52.0" prefHeight="24.0" prefWidth="122.0" text="Animation speed: " textFill="#00e000">
-                     <font>
-                        <Font name="Segoe UI Bold" size="13.0" />
-                     </font>
-                  </Label>
-                  <CheckBox fx:id="autoPauseCheck" layoutX="10.0" layoutY="100.0" mnemonicParsing="false" text="Pause after each step">
-                     <font>
-                        <Font name="Segoe UI" size="12.0" />
-                     </font></CheckBox>
-                  <CheckBox fx:id="autoResetCheck" layoutX="164.0" layoutY="101.0" mnemonicParsing="false" text="Clear after finishing">
-                     <font>
-                        <Font name="Segoe UI" size="12.0" />
-                     </font>
-                  </CheckBox>
-                  <ProgressBar layoutX="10.0" layoutY="129.0" prefHeight="18.0" prefWidth="286.0" progress="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="vertexInfoAp" disable="true" layoutY="150.0" prefHeight="67.0" prefWidth="307.0" style="-fx-border-color: #00e000; -fx-border-width: 3; -fx-background-color: #202020;">
-               <children>
-                  <Label layoutX="7.0" layoutY="38.0" text="Adjacent: " />
-                  <Label fx:id="vertexInfoIndexLb" layoutX="6.0" layoutY="10.0" style="-fx-font-size: 13; -fx-font-weight: bold;" text="No vertex selected" />
-                  <Button layoutX="251.0" layoutY="6.0" mnemonicParsing="false" onAction="#onDeleteVertexRequested" style="-fx-font-size: 10; -fx-font-weight: bold;" text="Delete" />
-                  <ListView fx:id="vertexInfoAdjListLw" layoutX="61.0" layoutY="33.0" orientation="HORIZONTAL" prefHeight="29.0" prefWidth="237.0" stylesheets="@../css/lw.css" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="307.0" prefHeight="251.0" prefWidth="745.0">
-               <children>
-                  <AnchorPane fx:id="executionAp" disable="true" layoutX="-3.0" prefHeight="35.0" prefWidth="748.0" style="-fx-border-color: #00e000; -fx-border-width: 3;">
+                  <AnchorPane fx:id="actionAp" disable="true" prefHeight="152.0" prefWidth="307.0" style="-fx-border-color: #00e000; -fx-border-width: 3;">
                      <children>
-                        <Button fx:id="startBtn" layoutX="461.0" layoutY="5.0" mnemonicParsing="false" text="Start" />
-                        <Button fx:id="continueBtn" layoutX="566.0" layoutY="5.0" mnemonicParsing="false" text="Continue" />
-                        <Button fx:id="stopBtn" layoutX="639.0" layoutY="5.0" mnemonicParsing="false" text="Stop" />
-                        <Button fx:id="pauseBtn" layoutX="511.0" layoutY="5.0" mnemonicParsing="false" text="Pause" />
-                        <Button fx:id="clearBtn" layoutX="687.0" layoutY="5.0" mnemonicParsing="false" text="Clear" />
+                        <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="51.0" text="Action: " textFill="#00e000">
+                           <font>
+                              <Font name="Segoe UI Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="actionCb" layoutX="148.0" layoutY="12.0" prefHeight="27.0" prefWidth="129.0" promptText="Select function" style="-fx-background-color: #202020; -fx-border-color: #00e000; -fx-text-base-color: #00e000;" />
+                        <Slider fx:id="speedSlider" blockIncrement="1.0" layoutX="142.0" layoutY="57.0" majorTickUnit="1.0" max="10.0" showTickLabels="true" />
+                        <Label layoutX="8.0" layoutY="52.0" prefHeight="24.0" prefWidth="122.0" text="Animation speed: " textFill="#00e000">
+                           <font>
+                              <Font name="Segoe UI Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <CheckBox fx:id="autoPauseCheck" layoutX="10.0" layoutY="100.0" mnemonicParsing="false" text="Pause after each step">
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <CheckBox fx:id="autoResetCheck" layoutX="164.0" layoutY="101.0" mnemonicParsing="false" text="Clear after finishing">
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <ProgressBar layoutX="10.0" layoutY="129.0" prefHeight="18.0" prefWidth="286.0" progress="0.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane fx:id="vertexInfoAp" disable="true" layoutY="150.0" prefHeight="67.0" prefWidth="307.0" style="-fx-border-color: #00e000; -fx-border-width: 3; -fx-background-color: #202020;">
+                     <children>
+                        <Label layoutX="7.0" layoutY="38.0" text="Adjacent: " />
+                        <Label fx:id="vertexInfoIndexLb" layoutX="6.0" layoutY="10.0" style="-fx-font-size: 13; -fx-font-weight: bold;" text="No vertex selected" />
+                        <Button layoutX="251.0" layoutY="6.0" mnemonicParsing="false" onAction="#onDeleteVertexRequested" style="-fx-font-size: 10; -fx-font-weight: bold;" text="Delete" />
+                        <ListView fx:id="vertexInfoAdjListLw" layoutX="61.0" layoutY="33.0" orientation="HORIZONTAL" prefHeight="29.0" prefWidth="237.0" stylesheets="@../css/lw.css" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane fx:id="edgeInfoAp" disable="true" layoutY="214.0" prefHeight="38.0" prefWidth="307.0" style="-fx-border-color: #00e000; -fx-border-width: 3;">
+                     <children>
+                        <Label fx:id="edgeInfoLb" layoutX="8.0" layoutY="10.0" prefHeight="18.0" prefWidth="115.0" style="-fx-font-size: 13; -fx-font-weight: bold;" text="No edge selected" />
+                        <Button layoutX="249.0" layoutY="6.0" mnemonicParsing="false" onAction="#onDeleteEdgeRequested" style="-fx-font-size: 10; -fx-font-weight: bold;" text="Delete" />
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="algoAp" layoutX="307.0" prefHeight="251.0" prefWidth="736.0" AnchorPane.leftAnchor="305.0" AnchorPane.rightAnchor="-2.0">
+               <children>
+                  <StackPane fx:id="actionInfoAp" alignment="CENTER_RIGHT" layoutX="-3.0" layoutY="35.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="-1.0" />
+                  <AnchorPane fx:id="executionAp" disable="true" layoutX="-3.0" prefHeight="35.0" prefWidth="748.0" style="-fx-border-color: #00e000; -fx-border-width: 3;" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="-1.0">
+                     <children>
+                        <Button fx:id="startBtn" layoutX="462.0" layoutY="5.0" mnemonicParsing="false" text="Start" AnchorPane.rightAnchor="238.0" />
+                        <Button fx:id="continueBtn" layoutX="566.0" layoutY="5.0" mnemonicParsing="false" text="Continue" AnchorPane.rightAnchor="110.0" />
+                        <Button fx:id="stopBtn" layoutX="639.0" layoutY="5.0" mnemonicParsing="false" text="Stop" AnchorPane.rightAnchor="62.0" />
+                        <Button fx:id="pauseBtn" layoutX="511.0" layoutY="5.0" mnemonicParsing="false" text="Pause" AnchorPane.rightAnchor="184.0" />
+                        <Button fx:id="clearBtn" layoutX="687.0" layoutY="5.0" mnemonicParsing="false" text="Clear" AnchorPane.rightAnchor="12.0" />
                         <Label fx:id="executeErrorLb" alignment="CENTER" layoutX="16.0" layoutY="11.0" style="-fx-text-fill: #e00000;" textAlignment="CENTER" />
                      </children>
                   </AnchorPane>
                </children></AnchorPane>
-            <AnchorPane fx:id="edgeInfoAp" disable="true" layoutY="214.0" prefHeight="38.0" prefWidth="307.0" style="-fx-border-color: #00e000; -fx-border-width: 3;">
-               <children>
-                  <Label fx:id="edgeInfoLb" layoutX="8.0" layoutY="10.0" prefHeight="18.0" prefWidth="115.0" style="-fx-font-size: 13; -fx-font-weight: bold;" text="No edge selected" />
-                  <Button layoutX="249.0" layoutY="6.0" mnemonicParsing="false" onAction="#onDeleteEdgeRequested" style="-fx-font-size: 10; -fx-font-weight: bold;" text="Delete" />
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="actionInfoAp" layoutX="305.0" layoutY="35.0" prefHeight="217.0" prefWidth="747.0" style="-fx-border-color: #00e000; -fx-border-width: 3;" />
          </children></AnchorPane>
-      <AnchorPane fx:id="infoContainerAP" maxHeight="944.0" maxWidth="186.0" minHeight="543.0" minWidth="186.0" prefHeight="870.0" prefWidth="186.0" style="-fx-border-color: #00e000; -fx-border-width: 3;" />
-      <AnchorPane fx:id="mainButtonAp" layoutX="-1.0" layoutY="867.0" minHeight="49.0" prefHeight="50.0" prefWidth="187.0" style="-fx-background-color: #202020; -fx-border-color: #00E000; -fx-border-width: 3;">
+      <AnchorPane fx:id="infoContainerAP" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="595.0" prefWidth="186.0" style="-fx-border-color: #00e000; -fx-border-width: 3;" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <AnchorPane fx:id="mainButtonAp" layoutX="-1.0" layoutY="593.0" minHeight="49.0" prefHeight="50.0" prefWidth="187.0" style="-fx-background-color: #202020; -fx-border-color: #00E000; -fx-border-width: 3;" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0">
          <children>
-            <Button fx:id="newButton" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="5.0" layoutY="4.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNewRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(https://cdn4.iconfinder.com/data/icons/32x32-free-design-icons/32/Add.png); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
+            <Button fx:id="newButton" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="5.0" layoutY="4.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNewRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-border-width: 3; -fx-graphic: url(&quot;/icons/new.png&quot;);" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font name="Segoe UI Bold" size="21.0" />
                </font>
             </Button>
-            <Button fx:id="loadBtn" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="49.0" layoutY="3.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onLoadRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(https://cdn2.iconfinder.com/data/icons/snipicons/5000/folder-open-32.png); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
+            <Button fx:id="loadBtn" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="49.0" layoutY="3.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onLoadRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(&quot;/icons/load.png&quot;); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font name="Segoe UI Bold" size="21.0" />
                </font>
             </Button>
-            <Button fx:id="saveBtn" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="93.0" layoutY="3.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onSaveRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(https://cdn4.iconfinder.com/data/icons/32x32-free-design-icons/32/Save.png); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
+            <Button fx:id="saveBtn" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="93.0" layoutY="3.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onSaveRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(&quot;/icons/save.png&quot;); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font name="Segoe UI Bold" size="21.0" />
                </font>
             </Button>
-            <Button fx:id="deleteBtn" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="137.0" layoutY="3.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onDeleteRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(https://cdn2.iconfinder.com/data/icons/humano2/32x32/actions/edit-delete.png); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
+            <Button fx:id="deleteBtn" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="137.0" layoutY="3.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onDeleteRequested" prefHeight="43.0" prefWidth="43.0" style="-fx-background-color: #282828; -fx-text-fill: #00e000; -fx-border-color: #00e000; -fx-graphic: url(&quot;/icons/delete.png&quot;); -fx-border-width: 3;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font name="Segoe UI Bold" size="21.0" />
                </font>
